# Translocator

./: .project  CMakeLists.txt  LICENSE  README.md
lib/bamtools-2.3.0/: CMakeLists.txt  LICENSE  README
lib/bamtools-2.3.0/docs/: Doxyfile
lib/bamtools-2.3.0/src/: CMakeLists.txt  ExportHeader.cmake
lib/bamtools-2.3.0/src/api/: BamAlgorithms.h  BamAlignment.cpp  BamAlignment.h  BamConstants.h  BamIndex.h  BamMultiReader.cpp  BamMultiReader.h  BamReader.cpp  CMakeLists.txt  IBamIODevice.h  SamConstants.h  SamHeader.cpp  SamHeader.h  SamProgram.cpp  SamProgram.h  SamProgramChain.cpp  SamProgramChain.h  SamReadGroup.cpp  SamReadGroup.h  SamReadGroupDictionary.cpp  SamReadGroupDictionary.h  SamSequence.cpp  SamSequence.h  SamSequenceDictionary.cpp  SamSequenceDictionary.h  api_global.h
lib/bamtools-2.3.0/src/shared/: bamtools_global.h
lib/bamtools-2.3.0/src/toolkit/: CMakeLists.txt  bamtools.cpp  bamtools_convert.cpp  bamtools_convert.h  bamtools_count.cpp  bamtools_count.h  bamtools_coverage.cpp  bamtools_coverage.h  bamtools_filter.cpp  bamtools_filter.h  bamtools_header.cpp  bamtools_header.h  bamtools_index.cpp  bamtools_index.h  bamtools_merge.cpp  bamtools_merge.h  bamtools_random.cpp  bamtools_random.h  bamtools_resolve.cpp  bamtools_resolve.h  bamtools_revert.cpp  bamtools_revert.h  bamtools_sort.cpp  bamtools_sort.h  bamtools_split.cpp  bamtools_split.h  bamtools_stats.cpp  (+3 more)
lib/minimap2/: kthread.h  map.c  mmpriv.h
lib/tclap-1.2.1/: Makefile  Makefile.in  aclocal.m4  config.status  configure  tclap.pc
lib/tclap-1.2.1/config/: Makefile  Makefile.in  config.h  config.h.in  stamp-h1
lib/tclap-1.2.1/docs/: Doxyfile  Makefile  Makefile.in  manual.html  manual.xml
lib/tclap-1.2.1/examples/: Makefile  Makefile.am  Makefile.in  test14.cpp
lib/tclap-1.2.1/include/: Makefile  Makefile.in
lib/tclap-1.2.1/msc/: Makefile  Makefile.in
lib/tclap-1.2.1/tests/: Makefile  Makefile.am  Makefile.in
lib/zlib-1.2.7/: CMakeLists.txt  configure  treebuild.xml  zconf.h.cmakein  zlib.map
lib/zlib-1.2.7/as400/: bndsrc  compile.clp  readme.txt  zlib.inc
lib/zlib-1.2.7/contrib/: README.contrib
lib/zlib-1.2.7/examples/: gun.c  gzlog.c  gzlog.h  zran.c
lib/zlib-1.2.7/qnx/: package.qpg
lib/zlib-1.2.7/test/: example.c  minigzip.c
lib/zlib-1.2.7/win32/: Makefile.msc  README-WIN32.txt
src/: Alignment.cpp  Alignment.h  ArgParseOutput.h  BamParser.cpp  BamParser.h  CMakeLists.txt  Ignore_Regions.cpp  Ignore_Regions.h  Paramer.h  Parser.h  Translocator.cpp  Version.h  Version.h.in  bioio.hpp
src/.ipynb_checkpoints/: Translocator-checkpoint.cpp
src/Genotyper/: Genotyper.cpp  Genotyper.h
src/cluster/: Cluster_SVs.cpp  Cluster_SVs.h
src/force_calling/: Force_calling.cpp  Force_calling.h  VCF_parser.cpp  VCF_parser.h
src/plane-sweep/: IContainer.h  Main.cpp  MyHeap.cpp  MyHeap.h  MyList.cpp  MyList.h  Node.h  Plane-sweep.h  PlaneSweep.cpp  PlaneSweep_slim.cpp  PlaneSweep_slim.h
src/print/: BedpePrinter.cpp  BedpePrinter.h  IPrinter.cpp  IPrinter.h  NGMPrinter.cpp  NGMPrinter.h  VCFPrinter.cpp  VCFPrinter.h
src/realign/: Realign.cpp  Realign.h  SWCPU.cpp  SWCPU.h
src/sub/: Breakpoint.cpp  Breakpoint.h  Container.h  Detect_Breakpoints.cpp  Detect_Breakpoints.h  IRegion.h  Realign.cpp  Realign.h
src/tree/: BinTree.cpp  BinTree.h  Breakpoint_Tree.cpp  Breakpoint_Tree.h  IntervallContainer.h  IntervallList.cpp  IntervallList.h  IntervallTree.cpp  IntervallTree.h  Intervall_bed.cpp  Intervall_bed.h  Leaf.h  TNode.h
(+314 files in other folders)
